# eldercare-risk-ai

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  environment-reference.txt  environment.yml  pyproject.toml
configs/: project.yaml
configs/data/: fall_risk_label_validation_v1.yaml  (+1 more)
data/: README.md
docs/: README.md
reports/: README.md  开发日志-2026-06-26.md  第一次组内工作汇报.md
tests/: test_fall_risk_annotation_conversion.py  test_fall_risk_baseline.py  test_fall_risk_data_manifest.py  test_fall_risk_data_validation.py  test_fall_risk_event_evaluation.py  test_fall_risk_event_policy.py  test_fall_risk_fall_state.py  test_fall_risk_feature_assembly.py  test_fall_risk_gait.py  test_fall_risk_near_fall.py  test_fall_risk_pipeline.py  test_fall_risk_pose.py  test_fall_risk_pose_quality.py  test_fall_risk_realtime.py  test_fall_risk_service_api.py  test_fall_risk_service_callback.py  test_fall_risk_service_session.py  test_fall_risk_sit_stand.py  test_fall_risk_splits.py  test_fall_risk_streaming_pose.py  test_fall_risk_tracking.py  test_ltmm_manifest.py  test_mental_health_adapters.py  test_mental_health_baseline.py  test_mental_health_cli.py  test_mental_health_cognitive_gait.py  test_mental_health_cognitive_tasks.py  test_mental_health_daily_aggregation.py  test_mental_health_daytime_activity.py  test_mental_health_movement_vitality.py  test_mental_health_night_physiology.py  test_mental_health_pipeline.py  test_mental_health_sleep_rhythm.py  test_mental_health_social_connection.py  test_mental_health_wandering.py  test_roi_annotation.py
(+196 files in other folders)
