[project]
name = "elderly-monitoring-algorithms"
version = "0.2.0"
description = "Algorithm prototypes for fall risk and mental health risk warning."
requires-python = ">=3.10"
dependencies = [
  "PyYAML==6.0.3"
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1"
]
vision = [
  "opencv-python-headless==4.13.0.92",
  "ultralytics==8.4.78"
]
service = [
  "fastapi==0.116.1",
  "uvicorn==0.35.0",
  "httpx==0.28.1"
]
ml = [
  "numpy==2.4.6",
  "scikit-learn==1.9.0",
  "lightgbm==4.6.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
